# FlexQ

./: .gitattributes  .gitignore  README.md
algorithm/: datautils.py  main.py  parallel_utils.py  requirements.txt  utils.py
algorithm/flexq_quantize/: flexq_norm.py  flexqllm.py  int_linear.py  int_matmul.py  quantizer.py  utils.py
algorithm/lm_eval/datasets/: README.md
algorithm/lm_eval/datasets/ARC-Challenge/test/: state.json
algorithm/lm_eval/datasets/ARC-Challenge/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
algorithm/lm_eval/datasets/ARC-Challenge/validation/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/ARC-Easy/test/: dataset_info.json  state.json
algorithm/lm_eval/datasets/ARC-Easy/train/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/ARC-Easy/validation/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/asdiv/: asdiv.py  dataset_infos.json
algorithm/lm_eval/datasets/boolq/test/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/boolq/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
algorithm/lm_eval/datasets/boolq/validation/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/coqa/: coqa.py
algorithm/lm_eval/datasets/drop/: drop.py
algorithm/lm_eval/datasets/headqa/: headqa.py
algorithm/lm_eval/datasets/hellaswag/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
algorithm/lm_eval/datasets/hellaswag/train/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/hellaswag/validation/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/hendrycks_ethics/: hendrycks_ethics.py
algorithm/lm_eval/datasets/hendrycks_math/: hendrycks_math.py
algorithm/lm_eval/datasets/logiqa/: logiqa.py
algorithm/lm_eval/datasets/mutual/: mutual.py
algorithm/lm_eval/datasets/pile/: pile.py
algorithm/lm_eval/datasets/piqa/test/: dataset_info.json  state.json
algorithm/lm_eval/datasets/piqa/train/: state.json
algorithm/lm_eval/datasets/piqa/validation/: state.json
algorithm/lm_eval/datasets/quac/: quac.py
algorithm/lm_eval/datasets/sat_analogies/: sat_analogies.py
algorithm/lm_eval/datasets/triviaqa/: README.md  triviaqa.py
algorithm/lm_eval/datasets/unscramble/: unscramble.py
algorithm/lm_eval/datasets/winogrande_xl/test/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/winogrande_xl/train/: data-00000-of-00001.arrow  state.json
algorithm/lm_eval/datasets/winogrande_xl/validation/: data-00000-of-00001.arrow  dataset_info.json  state.json
algorithm/models/: LMClass.py  int_llama_layer.py  int_opt_layer.py
datasets/wikitext-2-raw-v1/test/: data-00000-of-00001.arrow
datasets/wikitext-2-raw-v1/train/: data-00000-of-00001.arrow
datasets/wikitext-2-raw-v1/validation/: data-00000-of-00001.arrow
e2e/: README.md  build.sh
e2e/examples/cpp/: CMakeLists.txt
e2e/examples/cpp/llama/: llama_config.ini  llama_example.cc
e2e/examples/cpp/llamaV2/: llamaV2_config.ini  llamaV2_example.cc
e2e/examples/cpp/multi_gpu_gpt/: gpt_config.ini  multi_gpu_gpt_example.cc
e2e/examples/pytorch/llama2/utils/: hugging_llamaV2_convert.py
e2e/src/fastertransformer/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  decoding_kernels.cu  layernorm_kernels.cu  layernorm_kernels.h
e2e/src/fastertransformer/kernels/flexqgemm/: CMakeLists.txt  flexq_gemm_wrapper.cu  flexq_gemm_wrapper.h
e2e/src/fastertransformer/kernels/flexqgemm/common/: base.h  device.h
e2e/src/fastertransformer/kernels/flexqgemm/src/bgemm/: bgemm.cuh  flexq_bmma_kernel.h  flexq_bmma_library.cu  flexq_bmma_library.h  flexq_bmma_op.h
e2e/src/fastertransformer/kernels/flexqgemm/src/pack/: bit_packing.cu  bit_packing.h
e2e/src/fastertransformer/layers/: CMakeLists.txt  FfnLayer.cc  FfnLayer.h
e2e/src/fastertransformer/layers/attention_layers/: DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  GptContextAttentionLayer.cc  GptContextAttentionLayer.h  LlamaV2ContextAttentionLayer.cc  LlamaV2ContextAttentionLayer.h  LlamaV2DecoderSelfAttentionLayer.cc  LlamaV2DecoderSelfAttentionLayer.h
e2e/src/fastertransformer/models/llama/: LlamaContextDecoder.cc  LlamaContextDecoder.h  LlamaDecoder.cc  LlamaDecoder.h  LlamaDecoderLayerWeight.cc  LlamaDecoderLayerWeight.h
e2e/src/fastertransformer/models/llamaV2/: LlamaV2ContextDecoder.cc  LlamaV2ContextDecoder.h  LlamaV2Decoder.cc  LlamaV2Decoder.h
e2e/src/fastertransformer/models/multi_gpu_gpt/: ParallelGptContextDecoder.cc  ParallelGptContextDecoder.h  ParallelGptDecoder.cc  ParallelGptDecoder.h  ParallelGptDecoderLayerWeight.cc  ParallelGptDecoderLayerWeight.h
engine/: CMakeLists.txt  build.sh  gen_kernel.cpp  test_bgemm_kernel.cu  test_cublas_kernel.cu  test_cublas_kernel.sh  test_flexq_kernel.sh  test_packing_kernel.cu
engine/common/: timer.h
engine/src/bgemm/: bgemm.cuh  flexq_bmma_kernel.h  flexq_bmma_library.cu  flexq_bmma_library.h  flexq_bmma_op.h
engine/src/pack/: bit_packing.cu  bit_packing.h
engine/test/: test_kernel.h  test_w6a6_kernel.cu  test_w6a8_kernel.cu
models/llama-2-7b-hf/models--meta-llama--Llama-2-7b-hf/refs/: main
models/llama-2-7b-hf/models--meta-llama--Llama-2-7b-hf/snapshots/01c7f73d771dfac7d292323805ebc428287df4f9/: README.md
scripts/: create_condapack_archive.sh  create_prefix_env_and_install.sh  download_llama2.py  setup_download_run_llama2_fp16.sh
